--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pykube = "*"
 jmespath = "*"
+pykube-ng = "*"
 
 [dev-packages]
 flake8 = "*"
 pytest-cov = "*"
 pytest = "*"
 coveralls = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.7"
