only exclude Helm YAML templates

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -78,7 +78,7 @@ repos:
         exclude: >
             (?x)^(
                 ^{{.*}}.*\.yaml$|
-                ^helm/.*$
+                ^helm/templates/.*$
             )
         #
 
